--- a/imprint.html
+++ b/imprint.html
@@ -50,7 +50,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://dash.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
-                            Dashboard</a></li></ul>
+                            Dashboard</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://status.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Status</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://dc.baby-yoda.tk/invite">
                         Invite now</a></div>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="content4 cid-sbN3mWMeXJ" id="content4-d">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="content4 cid-sbN3mWMeXJ" id="content4-d">
     
     <div class="container">
         <div class="row justify-content-center">
