--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://dash.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
-                            Dashboard</a></li></ul>
+                            Dashboard</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://status.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Status</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://dc.baby-yoda.tk/invite">
                         Invite now</a></div>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
 
     
 
