--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/motsdzumwc6q-96x87.png" alt="Baby Yoda" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">Baby Yoda</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">Baby Yoda</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -48,8 +48,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://dash.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
-                            Dashboard</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://status.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Status</a></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://dash.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-setting mbr-iconfont mbr-iconfont-btn"></span>
+                            Dashboard</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://status.baby-yoda.tk"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Status</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://dc.baby-yoda.tk/invite">
                         Invite now</a></div>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
 
     
 
@@ -88,7 +88,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-smile-face mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-smile-face mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Fun</strong></h4>
                     </div>
@@ -97,7 +97,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-setting mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-setting mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Moderation</strong></h4>
                     </div>
@@ -106,7 +106,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Global Chat</strong></h4>
                     </div>
@@ -115,7 +115,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-key mobi-mbri"></span>
+                        <span class="mbr-iconfont mobi-mbri-key mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Nitro feature</strong></h4>
                     </div>
