--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header6 cid-sbMUOgRDGV mbr-fullscreen" id="header6-1">
 
     
 
-    
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(29, 30, 40);"></div>
 
     <div class="align-center container">
         <div class="row justify-content-center">
@@ -88,7 +88,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-smile-face mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
+                        <span class="mbr-iconfont mobi-mbri-smile-face mobi-mbri" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Fun</strong></h4>
                     </div>
@@ -97,7 +97,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-setting mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
+                        <span class="mbr-iconfont mobi-mbri-setting mobi-mbri" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Moderation</strong></h4>
                     </div>
@@ -106,7 +106,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
+                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Global Chat</strong></h4>
                     </div>
@@ -115,7 +115,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <span class="mbr-iconfont mobi-mbri-key mobi-mbri" style="color: rgb(53, 53, 53); fill: rgb(53, 53, 53);"></span>
+                        <span class="mbr-iconfont mobi-mbri-key mobi-mbri" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Nitro feature</strong></h4>
                     </div>
