--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Baby Yoda</strong></h1>
                 
                 <p class="mbr-text mbr-white mbr-fonts-style display-7">
-                     Baby Yoda is a bot of a whole new generation, it contains almost everything a normal discord server needs and even if a feautre is missing, you are welcome to suggest it and I will implement it if possible. 
+                     Baby Yoda is a next gen Discord bot, packed full of helpful commands for a Discord server, and if that feature doesn't exist, you are welcome to suggest it! I will make sure to implement it is possible. 
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="https://dc.baby-yoda.tk/invite">Invite him</a></div>
             </div>
