--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Baby Yoda</strong></h1>
                 
                 <p class="mbr-text mbr-white mbr-fonts-style display-7">
-                     Baby Yoda is a next gen Discord bot, packed full of helpful commands for a Discord server, and if a feature doesn't exist, you are welcome to suggest it! I will make sure to implement it is possible. 
+                     Baby Yoda is a next gen Discord bot, packed full of helpful commands for a Discord server, and if a feature doesn't exist, you are welcome to suggest it! I will make sure to implement it if possible. 
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="https://dc.baby-yoda.tk/invite">Invite him</a></div>
             </div>
@@ -117,7 +117,7 @@
                     <div class="card-box align-center">
                         <span class="mbr-iconfont mobi-mbri-key mobi-mbri" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                            <strong>Nitro feature</strong></h4>
+                            <strong>Nitro Features</strong></h4>
                     </div>
                 </div>
             </div>
