--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
           <br />
           <div class="socialbuttons">
             <form
-              action="http://emw-client.de/download/EMW-Client_Installer.bat"
+              action="https://dc.baby-yoda.tk/invite"
             >
               <button class="button download">
                 <i class="fa fa-plus"></i> Invite
               </button>
             </form>
             <form
-              action="http://emw-client.de/download/EMW-Client_Installer.bat"
+              action="https://dc.baby-yoda.tk/support"
             >
               <button class="button discord">
                 <i class="fa fa-ticket"></i> Support
