--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
             <div class="right"></div>
           </div>
           <li class="nav-item active">
-            <a class="nav-link" href="javascript:void(0);"
+            <a class="nav-link" href="./index.html"
               ><i class="fas fa-home"></i>Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);"
+            <a class="nav-link" href="https://dash.baby-yoda.tk"
               ><i class="fas fa-cog"></i>Dashboard</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);"
+            <a class="nav-link" href="https://status.baby-yoda.tk"
               ><i class="fas fa-signal"></i>Status</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);"
+            <a class="nav-link" href="./imprint.html"
               ><i class="fas fa-stamp"></i>Imprint</a
             >
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0);"
+              <a class="nav-link" href="https://dc.baby-yoda.tk/invite"
                 ><i class="fas fa-plus"></i>Invite</a
               >
             </li>
