--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             >
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="./partner.html"
+              ><i class="fas fa-user-friends"></i>Partner</a
+            >
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://status.baby-yoda.tk"
               ><i class="fas fa-signal"></i>Status</a
             >
@@ -82,9 +87,18 @@
       </div>
     </nav>
 
-    <div class="con1">
-      <div class="etwclient">
-        <div class="txtbgr">
+    <div class="con1" style="border-width: 100%;">
+      <div class="babyyoda">
+        <div class="header">
+          <h1>Partner</h1>
+          <div class="card transition">
+            <h2 class="transition">Tweak Bot</h2>
+            <p>Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!</p>
+            <br />
+            <div class="cta-container transition"><a href="https://tweak-bot.tk/" class="cta">Website</a></div>
+            <div class="card_circle transition"></div>
+          </div>
+        </div>
           <div class="textbox">
             <p>InvalidBots | Baby Yoda</p>
             <h1>Baby Yoda</h1>
@@ -94,8 +108,10 @@
               are welcome to suggest it! I will make sure to implement it if
               possible.
             </p>
-          </div>
-          <br />
+            <img
+            src="https://i.ibb.co/ftv7q94/2d5f0ee87fdac3f19fbe8e57ce9a2eb5.webp"
+            class="logo"
+          />
           <div class="socialbuttons">
             <form
               action="https://dc.baby-yoda.tk/invite"
@@ -111,20 +127,24 @@
                 <i class="fa fa-ticket"></i> Support
               </button>
             </form>
-            <div class="clear"></div>
+
+
+
           </div>
+
+
         </div>
-      </div>
+        </div>
 
-      <div class="changelog"></div>
-
-      <div class="logosize">
-        <img
-          src="https://i.ibb.co/ftv7q94/2d5f0ee87fdac3f19fbe8e57ce9a2eb5.webp"
-          class="logo"
-        />
       </div>
+      
+
     </div>
+    
+
+
+
+
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
