--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2 class="transition">Tweak Bot</h2>
             <p>Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!</p>
             <br />
-            <div class="cta-container transition"><a href="https://tweak-bot.tk/" class="cta">Website</a></div>
+            <div class="cta-container transition"><a href="http://tweak-bot.tk/" class="cta">Website</a></div>
             <div class="card_circle transition"></div>
           </div>
         </div>
