--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Baby Yoda" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://i.ibb.co/yp5yL4V/motsdzumwc6q-96x87.png" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="/BabyYodaWe/assets/style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -90,7 +90,7 @@
             <h2 class="transition">Tweak Bot</h2>
             <p>Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!</p>
             <br />
-            <div class="cta-container transition"><a href="http://tweak-bot.tk/" class="cta">Website</a></div>
+            <div class="cta-container transition"><a href="https://tweak-bot.tk/" class="cta">Website</a></div>
             <div class="card_circle transition"></div>
           </div>
         </div>
