--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Baby Yoda" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://i.ibb.co/yp5yL4V/motsdzumwc6q-96x87.png" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -143,10 +143,10 @@
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
-      particlesJS.load("particles-js", "./particles.json", function () {
+      particlesJS.load("particles-js", "particles.json", function () {
         console.log("particles.json loaded...");
       });
     </script>
-    <script src="./assets/index.js"></script>
+    <script src="assets/index.js"></script>
   </body>
 </html>
