--- a/index.html
+++ b/index.html
@@ -86,13 +86,48 @@
       <div class="babyyoda">
         <div class="header">
           <h1>Partner</h1>
-          <div class="card transition">
-            <h2 class="transition">Tweak Bot</h2>
-            <p>Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!</p>
-            <br />
-            <div class="cta-container transition"><a href="https://tweak-bot.tk/" class="cta">Website</a></div>
-            <div class="card_circle transition"></div>
-          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                <div class="mainflip">
+                    <div class="frontside">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <p><img class=" img-fluid" src="https://media.discordapp.net/attachments/805771266686582825/824296146607669259/circle-cropped.png?width=676&height=676" alt="card image"></p>
+                                <h4 class="card-title">Tweak Bot</h4>
+                                <p class="card-text">A multipurpose Discord bot.</p>
+                                <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="backside">
+                        <div class="card">
+                            <div class="card-body text-center mt-4">
+                                <h4 class="card-title">Tweak Bot</h4>
+                                <p class="card-text">Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!
+                                </p>
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <a class="social-icon text-xs-center" target="_blank" href="https://discord.com/invite/aehTpBUhVG">
+                                            <i class="fa fa-ticket"></i>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a class="social-icon text-xs-center" target="_blank" href="https://tweak-bot.tk/">
+                                            <i class="fa fa-external-link"></i>
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                      <a class="social-icon text-xs-center" target="_blank" href="https://dashboard.tweak-bot.tk">
+                                          <i class="fa fa-dashboard"></i>
+                                      </a>
+                                  </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
           <div class="textbox">
             <p>InvalidBots | Baby Yoda</p>
