--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <div class="frontside">
                         <div class="card">
                             <div class="card-body text-center">
-                                <p><img class=" img-fluid" src="https://media.discordapp.net/attachments/805771266686582825/824296146607669259/circle-cropped.png?width=676&height=676" alt="card image"></p>
-                                <h4 class="card-title">Tweak Bot</h4>
+                                <p><img class=" img-fluid" src="https://cdn.discordapp.com/attachments/649626762023665704/834486360470454292/talos.gif?width=676&height=676" alt="card image"></p>
+                                <h4 class="card-title">Talos</h4>
                                 <p class="card-text">A multipurpose Discord bot.</p>
                                 <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                             </div>
@@ -102,8 +102,8 @@
                     <div class="backside">
                         <div class="card">
                             <div class="card-body text-center mt-4">
-                                <h4 class="card-title">Tweak Bot</h4>
-                                <p class="card-text">Tweak Bot is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!
+                                <h4 class="card-title">Talos</h4>
+                                <p class="card-text">Talos is a multi purpose discord bot, with over 200 commands, that include fun and game commands, automod, music, color roles, and many more!
                                 </p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
