--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="https://tweak-bot.tk/">
+                                        <a class="social-icon text-xs-center" target="_blank" href="https://talos.tk/">
                                             <i class="fa fa-external-link"></i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                      <a class="social-icon text-xs-center" target="_blank" href="https://dashboard.tweak-bot.tk">
+                                      <a class="social-icon text-xs-center" target="_blank" href="https://dashboard.talos.tk">
                                           <i class="fa fa-dashboard"></i>
                                       </a>
                                   </li>
